[tool.poetry]
name = "llm-reflection"
version = "0.1.0"
description = "This system utilizes a large language model (LLM) and reflection"
authors = ["jggomez <juan.gomez01@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_reflection"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain-google-vertexai = "^1.0.6"
rich = "^13.7.1"
langchain-openai = "^0.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
